Refactor and enhance logging, routing, and Electron setup
Modified AppComponent to improve logging and route handling while introducing a central LogService. Updated Electron setup to use context isolation and added a preload script for secure communication. Adjusted various configurations and paths for consistency and better maintainability.

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,13 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "fs",
+              "path",
+              "os",
+              "module"
+            ]
           },
           "configurations": {
             "production": {
