--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@angular/cli": "^19.2.5",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^22.13.17",
+    "@types/node": "^22.14.0",
     "electron": "^35.1.2",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.3",
@@ -43,6 +43,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "path-browserify": "^1.0.1",
     "typescript": "~5.7.3"
   },
   "build": {
